[tool.poetry]
name = "x-hide-example"
version = "0.1.0"
description = ""
authors = ["Ntropy <dev@ntropy.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
connexion = {extras = ["swagger-ui"], version = "^2.12.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
